# ocr-free

./: .gitignore  README.md  compose.yaml  package-lock.json  package.json  pnpm-lock.yaml
.cursor/: settings.json
.cursor/agents/: SKILL_LOCATION_POLICY.md  USAGE-GUIDE.md  gsd-codebase-mapper.md  gsd-planner.md  gsd-research-synthesizer.md
.cursor/hooks/: agent-benchmark-guard.js  gsd-check-update.js  gsd-statusline.js
.cursor/rules/: always-orchestrator-skill.mdc
.planning/codebase/: ARCHITECTURE.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md
agents/: gsd-executor.md  gsd-roadmapper.md
agents/mappings/: rule-map.csv  skill-finder.csv
agents/orchestrator/: SKILL-DETAILS.md  handoff-template.md
agents/skills/: README.md  bauhaus-theme.md  database.md  expo-react-native.md  theme-instructions.md
apps/api/: pyproject.toml
apps/api/app/: __init__.py  config.py  main.py  models.py
apps/api/app/routes/: assets.py  convert.py  jobs.py
apps/api/app/services/: job_store.py  mineru_runner.py  output_reader.py  safe_paths.py
apps/web/: package.json  (+3 more)
docs/: AGENT_PORT_FORWARDING.md
graphify-out/: GRAPH_REPORT.md  graph.json
scripts/: check-api-port.cjs  dev.mjs  ensure-api-venv.cjs  ensure-mineru.cjs  run-mineru-tui.ps1  run-mineru-tui.sh  run_full_gate.sh
tools/mineru-tui/: README.md  pyproject.toml
tools/mineru-tui/src/mineru_tui/: __init__.py  __main__.py  app.py  cli.py  metrics.py  orchestrator.py  state.py
tools/mineru-tui/src/mineru_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
workflows/: agent-benchmark.yml
(+123 files in other folders)
