[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mineru-local-api"
version = "0.1.0"
description = "FastAPI backend for local MinerU document extraction"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "python-multipart==0.0.20",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
