[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mineru-tui"
version = "0.1.0"
description = "Textual TUI for local MinerU batch testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.47.0",
  "psutil>=5.9.0",
]

[project.scripts]
mineru-tui = "mineru_tui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
